Simple Deform modifier error #39567

Closed
opened 2014-04-02 22:39:26 +02:00 by Daniel Salazar · 9 comments
Member

System Information

openSUSE 12.3 64bits
NVIDIA 480GTX SC

Blender Version
Broken: a58814a

Short description of error

Jumpy behavior in simple deform bend mode when it reaches 0 angle

Exact steps for others to reproduce the error

Open mblur.blend
Scroll the frames between 1 and 11
Exactly on frame 6 the model jumps strangely

It is also VERY strange that if keyframes are moved 1 frame to the left so that they sit in 0 and 1 the error is gone

**System Information** openSUSE 12.3 64bits NVIDIA 480GTX SC **Blender Version** Broken: a58814a **Short description of error** Jumpy behavior in simple deform bend mode when it reaches 0 angle **Exact steps for others to reproduce the error** Open [mblur.blend](https://archive.blender.org/developer/F83810/mblur.blend) Scroll the frames between 1 and 11 Exactly on frame 6 the model jumps strangely It is also VERY strange that if keyframes are moved 1 frame to the left so that they sit in 0 and 1 the error is gone
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @zanqdo

Added subscriber: @zanqdo

Added subscriber: @PatriceBertrand

Added subscriber: @PatriceBertrand

Added subscriber: @willi-2

Added subscriber: @willi-2

At frame 6, if you hover over the angle displaying 0°, it shows 0.000001 radians in the tooltip. Seems to be a floating point number issue. If you enter 0 degrees manually at frame 6 and set a key frame on it, display is corrected, too.

At frame 6, if you hover over the angle displaying 0°, it shows 0.000001 radians in the tooltip. Seems to be a floating point number issue. If you enter 0 degrees manually at frame 6 and set a key frame on it, display is corrected, too.

This issue was referenced by blender/blender-addons-contrib@d5ce2b5466

This issue was referenced by blender/blender-addons-contrib@d5ce2b5466619f429f6ffeef27a1802beb860eb3

This issue was referenced by d5ce2b5466

This issue was referenced by d5ce2b5466619f429f6ffeef27a1802beb860eb3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d5ce2b5466.

Closed by commit d5ce2b5466.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39567
No description provided.