Fix T39567: simple deform modifier error